chore: fix wording

--- a/content/notes/1.my-internet-playground.md
+++ b/content/notes/1.my-internet-playground.md
@@ -26,6 +26,6 @@ It's available under the `MIT` license so feel free to do whatever you want with
 
 I've got some ideas for the future of this site, but for now, I'm going to keep it simple and just write about what I'm working on, or what I'm learning.
 
-Finally, I have two projects in the works to help people get started with Nuxt 3, so keep an eye out for updates on those by following me on [Twitter](https://twitter.com/mattgaunt).
+Finally, I have something in the works to help people get started with Nuxt 3, so keep an eye out for updates on those by following me on [Twitter](https://twitter.com/mattgaunt).
 
 Until next time!
